cdk-lab-network/cdk.out/CdkLabNetworkStack.template.json
{
 "Resources": {
  "cdklabvpc77E9E112": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.0.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Name",
      "Value": "CdkLabNetworkStack/cdk_lab_vpc"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "CdkLabNetworkStack/cdk_lab_vpc/Resource"
   }
  },
  "cdklabvpcPublicSubnet1SubnetDBF45613": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1a",
    "CidrBlock": "10.0.0.0/20",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "CdkLabNetworkStack/cdk_lab_vpc/PublicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "cdklabvpc77E9E112"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CdkLabNetworkStack/cdk_lab_vpc/PublicSubnet1/Subnet"
   }
  },
  "cdklabvpcPublicSubnet1RouteTableA831146D": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "CdkLabNetworkStack/cdk_lab_vpc/PublicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "cdklabvpc77E9E112"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CdkLabNetworkStack/cdk_lab_vpc/PublicSubnet1/RouteTable"
   }
  },
  "cdklabvpcPublicSubnet1RouteTableAssociation46AE3C56": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "cdklabvpcPublicSubnet1RouteTableA831146D"
    },
    "SubnetId": {
     "Ref": "cdklabvpcPublicSubnet1SubnetDBF45613"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CdkLabNetworkStack/cdk_lab_vpc/PublicSubnet1/RouteTableAssociation"
   }
  },
  "cdklabvpcPublicSubnet1DefaultRoute380D2D6F": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "cdklabvpcIGWA1A5230A"
    },
    "RouteTableId": {
     "Ref": "cdklabvpcPublicSubnet1RouteTableA831146D"
    }
   },
   "DependsOn": [
    "cdklabvpcVPCGWD050B47C"
   ],
   "Metadata": {
    "aws:cdk:path": "CdkLabNetworkStack/cdk_lab_vpc/PublicSubnet1/DefaultRoute"
   }
  },
  "cdklabvpcPublicSubnet1EIP55BD4DAB": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "CdkLabNetworkStack/cdk_lab_vpc/PublicSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "CdkLabNetworkStack/cdk_lab_vpc/PublicSubnet1/EIP"
   }
  },
  "cdklabvpcPublicSubnet1NATGateway9338852D": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "cdklabvpcPublicSubnet1EIP55BD4DAB",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "cdklabvpcPublicSubnet1SubnetDBF45613"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "CdkLabNetworkStack/cdk_lab_vpc/PublicSubnet1"
     }
    ]
   },
   "DependsOn": [
    "cdklabvpcPublicSubnet1DefaultRoute380D2D6F",
    "cdklabvpcPublicSubnet1RouteTableAssociation46AE3C56"
   ],
   "Metadata": {
    "aws:cdk:path": "CdkLabNetworkStack/cdk_lab_vpc/PublicSubnet1/NATGateway"
   }
  },
  "cdklabvpcPublicSubnet2Subnet698D29EF": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1b",
    "CidrBlock": "10.0.16.0/20",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "CdkLabNetworkStack/cdk_lab_vpc/PublicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "cdklabvpc77E9E112"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CdkLabNetworkStack/cdk_lab_vpc/PublicSubnet2/Subnet"
   }
  },
  "cdklabvpcPublicSubnet2RouteTable13427D42": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "CdkLabNetworkStack/cdk_lab_vpc/PublicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "cdklabvpc77E9E112"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CdkLabNetworkStack/cdk_lab_vpc/PublicSubnet2/RouteTable"
   }
  },
  "cdklabvpcPublicSubnet2RouteTableAssociation5893651E": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "cdklabvpcPublicSubnet2RouteTable13427D42"
    },
    "SubnetId": {
     "Ref": "cdklabvpcPublicSubnet2Subnet698D29EF"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CdkLabNetworkStack/cdk_lab_vpc/PublicSubnet2/RouteTableAssociation"
   }
  },
  "cdklabvpcPublicSubnet2DefaultRoute68017EEB": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "cdklabvpcIGWA1A5230A"
    },
    "RouteTableId": {
     "Ref": "cdklabvpcPublicSubnet2RouteTable13427D42"
    }
   },
   "DependsOn": [
    "cdklabvpcVPCGWD050B47C"
   ],
   "Metadata": {
    "aws:cdk:path": "CdkLabNetworkStack/cdk_lab_vpc/PublicSubnet2/DefaultRoute"
   }
  },
  "cdklabvpcPublicSubnet2EIPAF6E2B97": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "CdkLabNetworkStack/cdk_lab_vpc/PublicSubnet2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "CdkLabNetworkStack/cdk_lab_vpc/PublicSubnet2/EIP"
   }
  },
  "cdklabvpcPublicSubnet2NATGateway092223DD": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "cdklabvpcPublicSubnet2EIPAF6E2B97",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "cdklabvpcPublicSubnet2Subnet698D29EF"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "CdkLabNetworkStack/cdk_lab_vpc/PublicSubnet2"
     }
    ]
   },
   "DependsOn": [
    "cdklabvpcPublicSubnet2DefaultRoute68017EEB",
    "cdklabvpcPublicSubnet2RouteTableAssociation5893651E"
   ],
   "Metadata": {
    "aws:cdk:path": "CdkLabNetworkStack/cdk_lab_vpc/PublicSubnet2/NATGateway"
   }
  },
  "cdklabvpcPrivateSubnet1Subnet1FC84A13": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1a",
    "CidrBlock": "10.0.32.0/20",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "CdkLabNetworkStack/cdk_lab_vpc/PrivateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "cdklabvpc77E9E112"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CdkLabNetworkStack/cdk_lab_vpc/PrivateSubnet1/Subnet"
   }
  },
  "cdklabvpcPrivateSubnet1RouteTable258F19C4": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "CdkLabNetworkStack/cdk_lab_vpc/PrivateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "cdklabvpc77E9E112"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CdkLabNetworkStack/cdk_lab_vpc/PrivateSubnet1/RouteTable"
   }
  },
  "cdklabvpcPrivateSubnet1RouteTableAssociation5ACFC278": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "cdklabvpcPrivateSubnet1RouteTable258F19C4"
    },
    "SubnetId": {
     "Ref": "cdklabvpcPrivateSubnet1Subnet1FC84A13"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CdkLabNetworkStack/cdk_lab_vpc/PrivateSubnet1/RouteTableAssociation"
   }
  },
  "cdklabvpcPrivateSubnet1DefaultRoute46AE70D8": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "cdklabvpcPublicSubnet1NATGateway9338852D"
    },
    "RouteTableId": {
     "Ref": "cdklabvpcPrivateSubnet1RouteTable258F19C4"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CdkLabNetworkStack/cdk_lab_vpc/PrivateSubnet1/DefaultRoute"
   }
  },
  "cdklabvpcPrivateSubnet2Subnet10A12D4A": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1b",
    "CidrBlock": "10.0.48.0/20",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "CdkLabNetworkStack/cdk_lab_vpc/PrivateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "cdklabvpc77E9E112"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CdkLabNetworkStack/cdk_lab_vpc/PrivateSubnet2/Subnet"
   }
  },
  "cdklabvpcPrivateSubnet2RouteTable442F01F3": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "CdkLabNetworkStack/cdk_lab_vpc/PrivateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "cdklabvpc77E9E112"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CdkLabNetworkStack/cdk_lab_vpc/PrivateSubnet2/RouteTable"
   }
  },
  "cdklabvpcPrivateSubnet2RouteTableAssociationCE155D56": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "cdklabvpcPrivateSubnet2RouteTable442F01F3"
    },
    "SubnetId": {
     "Ref": "cdklabvpcPrivateSubnet2Subnet10A12D4A"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CdkLabNetworkStack/cdk_lab_vpc/PrivateSubnet2/RouteTableAssociation"
   }
  },
  "cdklabvpcPrivateSubnet2DefaultRouteBEE0115A": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "cdklabvpcPublicSubnet2NATGateway092223DD"
    },
    "RouteTableId": {
     "Ref": "cdklabvpcPrivateSubnet2RouteTable442F01F3"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CdkLabNetworkStack/cdk_lab_vpc/PrivateSubnet2/DefaultRoute"
   }
  },
  "cdklabvpcIGWA1A5230A": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "CdkLabNetworkStack/cdk_lab_vpc"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "CdkLabNetworkStack/cdk_lab_vpc/IGW"
   }
  },
  "cdklabvpcVPCGWD050B47C": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "InternetGatewayId": {
     "Ref": "cdklabvpcIGWA1A5230A"
    },
    "VpcId": {
     "Ref": "cdklabvpc77E9E112"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CdkLabNetworkStack/cdk_lab_vpc/VPCGW"
   }
  },
  "cdklabvpcRestrictDefaultSecurityGroupCustomResource7FCDF760": {
   "Type": "Custom::VpcRestrictDefaultSG",
   "Properties": {
    "ServiceToken": {
     "Fn::GetAtt": [
      "CustomVpcRestrictDefaultSGCustomResourceProviderHandlerDC833E5E",
      "Arn"
     ]
    },
    "DefaultSecurityGroupId": {
     "Fn::GetAtt": [
      "cdklabvpc77E9E112",
      "DefaultSecurityGroup"
     ]
    },
    "Account": {
     "Ref": "AWS::AccountId"
    }
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete",
   "Metadata": {
    "aws:cdk:path": "CdkLabNetworkStack/cdk_lab_vpc/RestrictDefaultSecurityGroupCustomResource/Default"
   }
  },
  "CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Version": "2012-10-17",
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "lambda.amazonaws.com"
       }
      }
     ]
    },
    "ManagedPolicyArns": [
     {
      "Fn::Sub": "arn:${AWS::Partition}:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
     }
    ],
    "Policies": [
     {
      "PolicyName": "Inline",
      "PolicyDocument": {
       "Version": "2012-10-17",
       "Statement": [
        {
         "Effect": "Allow",
         "Action": [
          "ec2:AuthorizeSecurityGroupIngress",
          "ec2:AuthorizeSecurityGroupEgress",
          "ec2:RevokeSecurityGroupIngress",
          "ec2:RevokeSecurityGroupEgress"
         ],
         "Resource": [
          {
           "Fn::Join": [
            "",
            [
             "arn:",
             {
              "Ref": "AWS::Partition"
             },
             ":ec2:",
             {
              "Ref": "AWS::Region"
             },
             ":",
             {
              "Ref": "AWS::AccountId"
             },
             ":security-group/",
             {
              "Fn::GetAtt": [
               "cdklabvpc77E9E112",
               "DefaultSecurityGroup"
              ]
             }
            ]
           ]
          }
         ]
        }
       ]
      }
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "CdkLabNetworkStack/Custom::VpcRestrictDefaultSGCustomResourceProvider/Role"
   }
  },
  "CustomVpcRestrictDefaultSGCustomResourceProviderHandlerDC833E5E": {
   "Type": "AWS::Lambda::Function",
   "Properties": {
    "Code": {
     "S3Bucket": {
      "Fn::Sub": "cdk-hnb659fds-assets-${AWS::AccountId}-${AWS::Region}"
     },
     "S3Key": "ee7de53d64cc9d6248fa6aa550f92358f6c907b5efd6f3298aeab1b5e7ea358a.zip"
    },
    "Timeout": 900,
    "MemorySize": 128,
    "Handler": "__entrypoint__.handler",
    "Role": {
     "Fn::GetAtt": [
      "CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0",
      "Arn"
     ]
    },
    "Runtime": {
     "Fn::FindInMap": [
      "LatestNodeRuntimeMap",
      {
       "Ref": "AWS::Region"
      },
      "value"
     ]
    },
    "Description": "Lambda function for removing all inbound/outbound rules from the VPC default security group"
   },
   "DependsOn": [
    "CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0"
   ],
   "Metadata": {
    "aws:cdk:path": "CdkLabNetworkStack/Custom::VpcRestrictDefaultSGCustomResourceProvider/Handler",
    "aws:asset:path": "asset.ee7de53d64cc9d6248fa6aa550f92358f6c907b5efd6f3298aeab1b5e7ea358a",
    "aws:asset:property": "Code"
   }
  },
  "CDKMetadata": {
   "Type": "AWS::CDK::Metadata",
   "Properties": {
    "Analytics": "v2:deflate64:H4sIAAAAAAAA/12OT0vDQBDFP0vvm5VUKHiMQaQHZUmkV5lsJu3YZDbszDaU0u8usdKIp/eHH4+3tvkmt/kKJsl8e8x6auylVvBHA5N8ol/by270pux450rjUtOTr1PDqHO3uCokxQ9oelz6pStEgidQCnyHZ/OydbO8g76C4gRn4yKdQHEZ3rJiZLwDtye/qVAFfxiQ9WoqlJCiR1Mm0TAsseO//g3GkXj/j3IxnKjF+AyCphBBrRX2P1zHZeCW5u9X4856CPzwaJ9svll9CVEWEysNaKubfgPnu9WeUgEAAA=="
   },
   "Metadata": {
    "aws:cdk:path": "CdkLabNetworkStack/CDKMetadata/Default"
   },
   "Condition": "CDKMetadataAvailable"
  }
 },
 "Mappings": {
  "LatestNodeRuntimeMap": {
   "af-south-1": {
    "value": "nodejs20.x"
   },
   "ap-east-1": {
    "value": "nodejs20.x"
   },
   "ap-northeast-1": {
    "value": "nodejs20.x"
   },
   "ap-northeast-2": {
    "value": "nodejs20.x"
   },
   "ap-northeast-3": {
    "value": "nodejs20.x"
   },
   "ap-south-1": {
    "value": "nodejs20.x"
   },
   "ap-south-2": {
    "value": "nodejs20.x"
   },
   "ap-southeast-1": {
    "value": "nodejs20.x"
   },
   "ap-southeast-2": {
    "value": "nodejs20.x"
   },
   "ap-southeast-3": {
    "value": "nodejs20.x"
   },
   "ap-southeast-4": {
    "value": "nodejs20.x"
   },
   "ap-southeast-5": {
    "value": "nodejs20.x"
   },
   "ap-southeast-7": {
    "value": "nodejs20.x"
   },
   "ca-central-1": {
    "value": "nodejs20.x"
   },
   "ca-west-1": {
    "value": "nodejs20.x"
   },
   "cn-north-1": {
    "value": "nodejs18.x"
   },
   "cn-northwest-1": {
    "value": "nodejs18.x"
   },
   "eu-central-1": {
    "value": "nodejs20.x"
   },
   "eu-central-2": {
    "value": "nodejs20.x"
   },
   "eu-north-1": {
    "value": "nodejs20.x"
   },
   "eu-south-1": {
    "value": "nodejs20.x"
   },
   "eu-south-2": {
    "value": "nodejs20.x"
   },
   "eu-west-1": {
    "value": "nodejs20.x"
   },
   "eu-west-2": {
    "value": "nodejs20.x"
   },
   "eu-west-3": {
    "value": "nodejs20.x"
   },
   "il-central-1": {
    "value": "nodejs20.x"
   },
   "me-central-1": {
    "value": "nodejs20.x"
   },
   "me-south-1": {
    "value": "nodejs20.x"
   },
   "mx-central-1": {
    "value": "nodejs20.x"
   },
   "sa-east-1": {
    "value": "nodejs20.x"
   },
   "us-east-1": {
    "value": "nodejs20.x"
   },
   "us-east-2": {
    "value": "nodejs20.x"
   },
   "us-west-1": {
    "value": "nodejs20.x"
   },
   "us-west-2": {
    "value": "nodejs20.x"
   }
  }
 },
 "Conditions": {
  "CDKMetadataAvailable": {
   "Fn::Or": [
    {
     "Fn::Or": [
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "af-south-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-east-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-northeast-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-northeast-2"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-northeast-3"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-south-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-south-2"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-southeast-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-southeast-2"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-southeast-3"
       ]
      }
     ]
    },
    {
     "Fn::Or": [
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-southeast-4"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ca-central-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ca-west-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "cn-north-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "cn-northwest-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-central-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-central-2"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-north-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-south-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-south-2"
       ]
      }
     ]
    },
    {
     "Fn::Or": [
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-west-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-west-2"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-west-3"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "il-central-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "me-central-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "me-south-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "sa-east-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "us-east-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "us-east-2"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "us-west-1"
       ]
      }
     ]
    },
    {
     "Fn::Equals": [
      {
       "Ref": "AWS::Region"
      },
      "us-west-2"
     ]
    }
   ]
  }
 },
 "Outputs": {
  "ExportsOutputRefcdklabvpc77E9E1125CA8C293": {
   "Value": {
    "Ref": "cdklabvpc77E9E112"
   },
   "Export": {
    "Name": "CdkLabNetworkStack:ExportsOutputRefcdklabvpc77E9E1125CA8C293"
   }
  },
  "ExportsOutputRefcdklabvpcPublicSubnet1SubnetDBF456132BEC9177": {
   "Value": {
    "Ref": "cdklabvpcPublicSubnet1SubnetDBF45613"
   },
   "Export": {
    "Name": "CdkLabNetworkStack:ExportsOutputRefcdklabvpcPublicSubnet1SubnetDBF456132BEC9177"
   }
  },
  "ExportsOutputRefcdklabvpcPublicSubnet2Subnet698D29EF0F814D93": {
   "Value": {
    "Ref": "cdklabvpcPublicSubnet2Subnet698D29EF"
   },
   "Export": {
    "Name": "CdkLabNetworkStack:ExportsOutputRefcdklabvpcPublicSubnet2Subnet698D29EF0F814D93"
   }
  },
  "ExportsOutputRefcdklabvpcPrivateSubnet1Subnet1FC84A13826F31BE": {
   "Value": {
    "Ref": "cdklabvpcPrivateSubnet1Subnet1FC84A13"
   },
   "Export": {
    "Name": "CdkLabNetworkStack:ExportsOutputRefcdklabvpcPrivateSubnet1Subnet1FC84A13826F31BE"
   }
  },
  "ExportsOutputRefcdklabvpcPrivateSubnet2Subnet10A12D4A5CB7B2E1": {
   "Value": {
    "Ref": "cdklabvpcPrivateSubnet2Subnet10A12D4A"
   },
   "Export": {
    "Name": "CdkLabNetworkStack:ExportsOutputRefcdklabvpcPrivateSubnet2Subnet10A12D4A5CB7B2E1"
   }
  }
 },
 "Parameters": {
  "BootstrapVersion": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/cdk-bootstrap/hnb659fds/version",
   "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
  }
 },
 "Rules": {
  "CheckBootstrapVersion": {
   "Assertions": [
    {
     "Assert": {
      "Fn::Not": [
       {
        "Fn::Contains": [
         [
          "1",
          "2",
          "3",
          "4",
          "5"
         ],
         {
          "Ref": "BootstrapVersion"
         }
        ]
       }
      ]
     },
     "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
    }
   ]
  }
 }
}
